Overflows on my phone. I sort of want to fix this but I may stop with this project and move on because I've learned so much already.

--- a/styleme.css
+++ b/styleme.css
@@ -24,6 +24,7 @@ body {
     box-shadow: inset 0.3px 0.3px 4px 3px #000000;
     z-index: 1;
     cursor: text;
+    overflow-x:hidden;
 }
 
 .input-box {
